--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -3,6 +3,7 @@
 html,
 body {
     height: 100%;
+    text-align: revert;
 }
 
 .wrap {
@@ -15,7 +16,7 @@ body {
 .footer {
     height: 60px;
     background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #dddddd;
     padding-top: 20px;
 }
 
@@ -30,7 +31,7 @@ body {
 }
 
 .not-set {
-    color: #c55;
+    color: #cc5555;
     font-style: italic;
 }
 
@@ -80,7 +81,7 @@ a.desc:after {
 .hint-block {
     display: block;
     margin-top: 5px;
-    color: #999;
+    color: #999999;
 }
 
 .error-summary {
@@ -94,9 +95,20 @@ a.desc:after {
 .nav > li > form > button.logout {
     text-decoration: none;
     outline: none;
-    color: #fff;
+    color: #ffffff;
     padding-right: 0;
     padding-left: 0;
+}
+
+.view-info {
+    width: 300px;
+    margin-top: -50px;
+}
+
+.category-photo {
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: revert;
 }
 
 @media (min-width: 992px) {
