--- a/backend/web/css/book-gallery.css
+++ b/backend/web/css/book-gallery.css
@@ -43,6 +43,15 @@ body {
     padding-bottom: 20px;
 }
 
+.fullClick {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .footer {
     height: 60px;
     background-color: #f5f5f5;
