--- a/backend/web/css/book-gallery.css
+++ b/backend/web/css/book-gallery.css
@@ -7,6 +7,13 @@ body {
     text-align: revert;
 }
 
+.body {
+    min-height: 100%;
+    height: auto;
+    position: revert;
+    border: 1px solid transparent;
+}
+
 .wrap {
     min-height: 100%;
     height: auto;
@@ -45,11 +52,40 @@ body {
 
 .fullClick {
     width: 100%;
-    height: 100%;
-    z-index: 1;
+    height: 35%;
     position: absolute;
-    top: 0;
-    right: 0;
+    margin-top: -20px;
+    left: 30px;
+}
+
+.logo {
+    width: 100px;
+    display: inline-flex;
+}
+
+.logo img {
+    margin: -20px 5px;
+    float: left;
+    width: 150px;
+    height: 38px;
+}
+
+.logo ul {
+    width: 200%;
+    list-style: none;
+    position: relative;
+    animation: slideInRight 100s ease-in-out infinite;
+}
+
+.logo ul li{
+    float: left;
+}
+
+@keyframes slideInRight {
+    0%{left: 0}
+    30%{left: -300px}
+    60%{left: -600px}
+    90%{left: -900px}
 }
 
 .footer {
