--- a/backend/web/css/book-gallery.css
+++ b/backend/web/css/book-gallery.css
@@ -50,6 +50,10 @@ body {
     padding-bottom: 20px;
 }
 
+.books-view .photo-title{
+    text-align: center;
+}
+
 .fullClick {
     width: 100%;
     height: 35%;
